Safari 15.1 H264 FullHD video encode/decode fails https://bugs.webkit.org/show_bug.cgi?id=233036 <rdar://80345048>

Reviewed by Eric Carlson.

Source/ThirdParty/libwebrtc:

H264 encoder now checks the profile and fails if frame is too big.
To get back to the past behavior, we are now using auto level for both ARM64 devices as well as devices with Monterey OS.

* Source/webrtc/sdk/WebKit/VideoProcessingSoftLink.h:
* Source/webrtc/sdk/objc/components/video_codec/RTCVideoEncoderH264.mm:

LayoutTests:

* platform/mac-wk2/TestExpectations:



Canonical link: https://commits.webkit.org/244337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285928 268f45cc-cd09-0410-ab3c-d52691b4dbfc